Updated to get bibliography to work.

--- a/ChristeAnthonyPhDThesis.tex
+++ b/ChristeAnthonyPhDThesis.tex
@@ -125,7 +125,7 @@
   \nocite{*}
 
   %%% Input file for bibliography
-  \bibliography{thesis.bib}
+  \bibliography{thesis}
   %% Use this for an alphabetically organized bibliography
   \bibliographystyle{plain}
   %% Use this for a reference order organized bibliography
